Edit README, fix lint issues

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- react-bootstrap stylesheet -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 
-    <title>React App</title>
+    <title>Scott DeVito - Web Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
